--- a/.env
+++ b/.env
@@ -6,14 +6,14 @@ TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
-NOTE_ICON_FILETREE=false
-NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_FILETREE=true
+NOTE_ICON_INTERNAL_LINKS=true
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/chetachiezikeuzor/Yin-and-Yang-Theme/HEAD/obsidian.css
-BASE_THEME=light
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
